---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/functions/test_function_as_function_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_function_as_function_parameter.c"
   (function-definition
      plus_1~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (add (name x~2 `int`) 1))))
   (declaration f~3 `fn(callback: fn(∅: int) -> int) -> int` ∅)
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (return
            (call (name f~3 `fn(callback: fn(∅: int) -> int) -> int`)
               (name plus_1~0 `fn(x: int) -> int`)))))
   (function-definition
      f~3 `fn(callback: fn(∅: int) -> int) -> int`
      (params
         callback~8 `fn(∅: int) -> int`)
      (compound-statement
         (return
            (call (name callback~8 `fn(∅: int) -> int`)
               (call (name callback~8 `fn(∅: int) -> int`)
                  42))))))

----- stderr -----
